# Test_project

./: README.md  pyproject.toml  requirements.txt
scraper/: app.py  models.py  scraper.py
weather_api/: manage.py  request_samples.py  scraper.py  weather.db
weather_api/mod_weather/: __init__.py  api.py  endpoints.py  models.py  serializers.py  settings.py  urls.py
